add the script tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       </form>
       <button onclick="trial()">submit</button>
     </div>
+    <script type="text/javascript">
+
+    </script>
 
   </body>
 </html>
