check for the sides entered if they make a triangle

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <button onclick="trial()">submit</button>
     </div>
     <script type="text/javascript">
+    function triangle(){
+      document.getElementById("myform").elements.namedItem("side1").value
+      document.getElementById("myform").elements.namedItem("side2").value
+      document.getElementById("myform").elements.namedItem("side3").value
+      if(( side1 + side2 ) <= side3 || ( side2 + side3 ) <= side1 || ( side1 + side3 ) <= side2 ){
+        alert("Can't make a triangle");
+      }
+    }
 
     </script>
 
