--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       if(( side1 + side2 ) <= side3 || ( side2 + side3 ) <= side1 || ( side1 + side3 ) <= side2 ){
         alert("Can't make a triangle");
       }
+      else if(side1===side2&& side2===side3){
+        alert("Equilateral triangle");
+      }
     }
 
     </script>
