--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       else if(side1===side2&& side2===side3){
         alert("Equilateral triangle");
       }
+      else if(side1===side2 || side3===side2 || side3===side1){
+        alert("Isosceles  triangle ");
     }
 
     </script>
