add the for loop for Scalene triangle

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       }
       else if(side1===side2 || side3===side2 || side3===side1){
         alert("Isosceles  triangle ");
-    }
+      }
+      else if(side1!==side1 && side2 !==side3 && side3 !== side1){
+        alert("Scalene triangle");
+      }
 
     </script>
 
