else aleart use of invalid

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       else if(side1!==side1 && side2 !==side3 && side3 !== side1){
         alert("Scalene triangle");
       }
+      else {
+        alert("Incomplete Triangle");
+      }
 
     </script>
 
