add a link to the css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title></title>
   </head>
   <body>
+    <h1>TRIANGLE TRACKER</h1>
+    <link rel="stylesheet" href="styles/styles.css">
     <div class="ratemo">
       <form class="" action="index.html" method="post" id="myform">
         <input type="text" name="side1" value="">
