--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
     <script type="text/javascript">
     function trial(){
-      var side1 = document.getElementById("myform").elements.namedItem("side1").value
-      var side2 = document.getElementById("myform").elements.namedItem("side2").value
-      var side3 = document.getElementById("myform").elements.namedItem("side3").value
-      if(( side1 + side2 ) <= side3 || ( side2 + side3 ) <= side1 || ( side1 + side3 ) <= side2 ){
+      var side1 = [document.getElementById("myform").elements.namedItem("side1").value]
+      var side2 = [document.getElementById("myform").elements.namedItem("side2").value]
+      var side3 = [document.getElementById("myform").elements.namedItem("side3").value]
+      if(( side1[0] + side2[0] ) <= side3[0] || ( side2[0] + side3[0] ) <= side1[0] || ( side1[0] + side3[0] ) <= side2]0] ){
         alert("Can't make a triangle");
       }
       else if(side1===side2&& side2===side3){
