center the heading

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title></title>
   </head>
   <body>
-    <h1>TRIANGLE TRACKER</h1>
+    <h1 align="center">TRIANGLE TRACKER</h1>
     <link rel="stylesheet" href="styles/styles.css">
     <div class="ratemo">
-      <form class="" action="index.html" method="post" id="myform">
-        <input type="text" name="side1" value="">
-        <input type="text" name="side2" value="">
-        <input type="text" name="side3" value="">
+      <form class="frm" action="index.html" method="post" id="myform">
+        <input type="text" name="side1" value=""><br>
+        <input type="text" name="side2" value=""><br>
+        <input type="text" name="side3" value=""><br>
       </form>
-      <button onclick="trial()">submit</button>
+      <button class="buton" onclick="trial()">submit</button>
     </div>
     <script type="text/javascript">
     function trial(){
