--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="styles/styles.css">
     <div class="ratemo">
       <form class="frm" action="index.html" method="post" id="myform">
+        <p>Enter the first side</p>
         <input type="text" name="side1" value=""><br>
+        <p>Enter the second side</p>
         <input type="text" name="side2" value=""><br>
+        <p>Enter the third side</p>
         <input type="text" name="side3" value=""><br>
       </form>
       <button class="buton" onclick="trial()">submit</button>
