align center the form

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="ratemo">
       <form class="frm" action="index.html" method="post" id="myform">
         <p>Enter the first side</p>
-        <input type="text" name="side1" value=""><br>
+        <input type="text" align="center" name="side1" value=""><br>
         <p>Enter the second side</p>
-        <input type="text" name="side2" value=""><br>
+        <input type="text" align="center" name="side2" value=""><br>
         <p>Enter the third side</p>
-        <input type="text" name="side3" value=""><br>
-      </form>
-      <button class="buton" onclick="trial()">submit</button>
+        <input type="text" align="center" name="side3" value=""><br>
+      </form><br>
+      <button align="center" class="buton" onclick="trial()">submit</button>
     </div>
     <script type="text/javascript">
     function trial(){
